--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.13.1"
 drf-yasg = "^1.21.3"
 structlog = "^22.1.0"
 psycopg2-binary = "^2.9.3"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
