--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,14 @@ description = ""
 authors = ["thiagodias"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.10"
 Django = "^4.1"
 djangorestframework = "^3.13.1"
 drf-yasg = "^1.21.3"
 structlog = "^22.1.0"
 psycopg2-binary = "^2.9.3"
 psycopg2 = "^2.9.3"
+zappa = "0.55.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
