--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-dev.txt --require-hashes
+        pip install -r requirements-dev.txt --no-deps
     - name: Run Tests
       env:
         DB_NAME: postgres
