--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ drf-yasg = "^1.21.3"
 structlog = "^22.1.0"
 psycopg2-binary = "^2.9.3"
 psycopg2 = "^2.9.3"
-zappa = "0.55.0"
+zappa = "^0.55.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
