--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ structlog = "^22.1.0"
 psycopg2-binary = "^2.9.3"
 psycopg2 = "^2.9.3"
 zappa = "^0.55.0"
+django-storages = "^1.13.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
