--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -51,4 +51,5 @@ jobs:
         POSTGRES_DB: ${{ matrix.database-name }}
       working-directory: ./src
       run: |
+        flake8
         pytest
